--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
           <span class="visually-hidden">Next</span>
         </button>
       </div>
+      <div id="all_cards">
       <div class="card" style="width: 18rem;">
         <img src="./asset/image1.jpg" class="card-img-top" alt="...">
         <div class="card-body">
@@ -118,6 +119,7 @@
           <a href="#" class="card-link">Card link</a>
           <a href="#" class="card-link">Another link</a>
         </div>
+      </div>
       </div>
 </body>
 </html>
