--- a/index.html
+++ b/index.html
@@ -12,22 +12,32 @@
     <title>Document</title>
 </head>
 <body>
+  <script>
+   $(document).ready(function () {
+    $('.nav ul li').click(function(e) {
+
+        $('.nav ul li.active').removeClass('active');
+
+        var $parent = $(this).parent();
+        $parent.addClass('active');
+        e.preventDefault();
+    });
+});
+
+</script>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">Navbar</a>
+          <a href="#"> <img src="./asset/logo.png"  alt="Logo" height="100px" width="100px" class="logo"/> </a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
-          <div class="collapse navbar-collapse" id="navbarNav">
+          <div class="collapse navbar-collapse nav-text" id="navbarNav">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
+                <a class="nav-link nav-item-padding" href="#">Features</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Features</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Pricing</a>
+                <a class="nav-link nav-item-padding" href="#">Pricing</a>
               </li>
             </ul>
           </div>
