--- a/index.html
+++ b/index.html
@@ -41,21 +41,21 @@
         </div>
         <div class="carousel-inner">
           <div class="carousel-item active" data-bs-interval="10000">
-            <img src="./asset/image1.jpg" class="d-block w-100 size" alt="...">
+            <img class="size d-block w-100" src="./asset/image1.jpg" alt="...">
             <div class="carousel-caption d-none d-md-block">
               <h5>First slide label</h5>
               <p>Some representative placeholder content for the first slide.</p>
             </div>
           </div>
           <div class="carousel-item" data-bs-interval="2000">
-            <img src="./asset/image2.jpg" class="d-block w-100 size" alt="...">
+            <img class="size d-block w-100" src="./asset/image2.jpg" alt="...">
             <div class="carousel-caption d-none d-md-block">
               <h5>Second slide label</h5>
               <p>Some representative placeholder content for the second slide.</p>
             </div>
           </div>
           <div class="carousel-item">
-            <img src="./asset/image3.jpg" class="d-block w-100 size" alt="...">
+            <img class="size d-block w-100" src="./asset/image3.jpg" alt="...">
             <div class="carousel-caption d-none d-md-block">
               <h5>Third slide label</h5>
               <p>Some representative placeholder content for the third slide.</p>
