--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
-          <a href="#"> <img src="./asset/logo.png"  alt="Logo" height="100px" width="100px" class="logo"/> </a>
+          <a href="#"> <img src="./asset/Logo.png"  alt="Logo" height="100px" width="100px" class="logo"/> </a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
