--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
       </div>
       </div>
         <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
-  Launch demo modal
+  Contact Form
 </button>
 
 <!-- Modal -->
