--- a/index.html
+++ b/index.html
@@ -10,6 +10,16 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="./css/style.css">
     <title>Document</title>
+    <style>
+      .center {
+  margin: 0;
+  position: absolute;
+  top: 200%;
+  left: 50%;
+  -ms-transform: translate(-50%, -0%);
+  transform: translate(-0%, -50%);
+}
+    </style>
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
@@ -118,9 +128,11 @@
         </div>
       </div>
       </div>
+      <div class="center">
         <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
   Contact Form
 </button>
+</div>
 
 <!-- Modal -->
 <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
