Update index.html with reference to #13
Contact Form Button Issue fixed

--- a/index.html
+++ b/index.html
@@ -118,10 +118,11 @@
         </div>
       </div>
       </div>
+        <p align="center">
         <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
   Contact Form
 </button>
-
+        </p>
 <!-- Modal -->
 <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
   <div class="modal-dialog">
